# MathGame

./: .cookiecutter.json  .flake8  .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  noxfile.py  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: tests.yml
docs/: Makefile  conf.py  index.md  index.rst  installation.rst  make.bat  reference.md  usage.md  usage.rst
src/hypermodern_simple_math_game/: __init__.py  __main__.py
src/math_game/: __init__.py  cli.py  main.py
src/math_game/modules/: data_base.py  database.py  points.py  random_problem.py
tests/: __init__.py  test_main.py  test_math_game.py
tests/test_modules/: test_points.py  test_random_problem.py
